
2010-07-15  Paulo Pizarro <paulo.pizarro@gmail.com>
	* refactory on load module glib, requiring 'sofia.glib' doesn't load the 'sofia.su' module anymore

2010-07-14  Tiago Katcipis <tiagokatcipis@gmail.com>
	* fixing bug when loading sofia.glib after loading sofia.su

2010-07-13  Guilherme Silveira <xguiga@gmail.com>
	* implemented function get_proxy_subscription_state on the module 'sip'
	* implemented function get_proxy_msg_payload on the module 'sip'

2010-07-10  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed sdp module to use negative numbers on the access to the stack 
	* changed glib module to use negative numbers on the access to the stack 
	* changed sdp module to use negative numbers on the access to the stack 
	* changed utils to use negative numbers on the access to the stack 

2010-07-09  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed LUA_CMODULE default value on the configure.ac

2010-07-08  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed to use negative numbers on the access to the stack

2010-07-02  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.6devel
	* implemented threading method on the root class
	* fixed bind method of the NuaHandle class
	  to accept nil or none values (unbind)

2010-07-01  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented destroy method on the nua class
	* nua only will be collected after to call destroy method
	* fixed nua.lua test to call nua_destroy and nh_destroy

2010-06-28  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.5

2010-06-24  Paulo Pizarro <paulo.pizarro@gmail.com>
	* refactory of the su_timer module
	* nua only will be collected after shutdown complete

2010-06-23  Tiago Katcipis <tiagokatcipis@gmail.com>
	* created msg module with params_find function

2010-06-23  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented function get_proxy_authenticate on the module 'sip'

2010-06-22  Paulo Pizarro <paulo.pizarro@gmail.com>